# prebuilt-v8

./: README.md  build_args.cfg  spec.cfg  v8-versions
.github/workflows/: build-for-release.yml  create-release.yml  push-tags.yml
configurations/: android-arm64.gn  desktop-x64.gn  ios-arm64.gn
scripts/: build-v8.bat  build-v8.sh  compute-release-body.js  gclient-sync.bat  push-tags.sh
