target_os="ios"
target_cpu="arm64"
use_xcode_clang=true
enable_ios_bitcode=true
ios_deployment_target=10
clang_use_chrome_plugins=false
is_component_build=false
is_debug=false
strip_debug_info=true
symbol_level=0
treat_warnings_as_errors=false
use_custom_libcxx=false
use_sysroot=false
v8_enable_gdbjit=false
v8_enable_i18n_support=false
v8_enable_test_features=false
v8_extra_library_files=[]
v8_monolithic=true
v8_untrusted_code_mitigations=false
v8_use_external_startup_data=false
v8_use_snapshot=true
